[project]
name = "NatPy"
version = "0.1.1"
license = {file = "LICENSE"}
authors = [
  {name="Tomas Howson", email="tomas.howson@adelaide.edu.au"},
  {name="Andre Scaffidi", email="andre.scaffidi@adelaide.edu.au"}
  ]
readme = {file = "README.md", content-type = "text/markdown"}

description="Convert the units of particle physics quantities."

dependencies = ["astropy>=5.3.0,<6.0.0", "numpy>=1.14.2,<2.0"]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python=">=3.7"
[project.urls]
Homepage = "https://github.com/AndreScaffidi/NatPy"

[build-system]
requires = ["setuptools>=45", "wheel", "astropy>=5.3.0,<6.0.0", "numpy>=1.14.2,<2.0"]
build-backend = "setuptools.build_meta"
